ICE-9420 - Fixed ace:tabset double borders. Added hover styling.

--- a/icefaces3/trunk/icefaces/ace/component/resources/icefaces.ace/tabset/tabset.css
+++ b/icefaces3/trunk/icefaces/ace/component/resources/icefaces.ace/tabset/tabset.css
@@ -190,6 +190,16 @@ padding-right: 4em;
 vertical-align:baseline;
 }
 
+/* Override duplicate border from JQUI rules */
+.yui-nav > li.ui-state-default {
+    border-bottom:none;
+}
+
+/* Override duplicate border from JQUI rules */
+.yui-nav > li.ui-state-active > div.yui-navdiv > em {
+    border:none;
+}
+
 /* ----- custom rules ----- */
 
 .ui-tabs-vertical {
